--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Configurações Link Preview -->
     <meta property="og:title" content="Gerenciamento de Pagamentos">
     <meta property="og:description" content="Controle financeiro de obra. Valor total, pagos e saldo restante.">
-    <meta property="og:image" content="https://iili.io/fpiTKyF.jpg">
+    <meta property="og:image" content="https://iili.io/fy7S4jf.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="800">
@@ -19,8 +19,8 @@
     <!-- Configurações PWA -->
     <meta name="theme-color" content="#f1f5f9">
     <link rel="manifest" href="./manifest.json">
-    <link rel="icon" href="https://iili.io/fpiTKyF.jpg">
-    <link rel="apple-touch-icon" href="https://iili.io/fpiTKyF.jpg">
+    <link rel="icon" href="https://iili.io/fy7S4jf.jpg">
+    <link rel="apple-touch-icon"https://iili.io/fy7S4jf.jpg">
     <meta name="apple-mobile-web-app-title" content="Gerenciamento">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
@@ -84,7 +84,7 @@
             <div class="inline-block relative group">
                 <div class="absolute -inset-1 bg-gradient-to-r from-blue-600 to-indigo-600 rounded-2xl blur opacity-25 group-hover:opacity-40 transition duration-500"></div>
                 <div class="relative p-1 bg-white rounded-2xl shadow-xl shadow-slate-300 mb-4 ring-4 ring-white overflow-hidden">
-                     <img src="https://iili.io/fpiTKyF.jpg" alt="Logo" class="w-24 h-24 rounded-xl object-cover">
+                     <img src="https://iili.io/fy7S4jf.jpg" alt="Logo" class="w-24 h-24 rounded-xl object-cover">
                 </div>
             </div>
             <h1 class="text-2xl md:text-3xl font-bold text-slate-900 leading-tight">Gerenciamento de Pagamentos</h1>
