--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Gerenciamento de Obras">
     <meta property="og:description" content="Relatório de pagamentos, controle de saldo e gestão de empreitada.">
     <!-- Nova Imagem Temática de Construção (Alta Definição) -->
-    <meta property="og:image" content="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?q=80&w=1200&auto=format&fit=crop">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1543286386-2e659306cd6c?w=1200&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGdlcmVuY2lhbWVudG98ZW58MHx8MHx8fDA%3D">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
