--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Gerenciamento de Obras">
     <meta property="og:description" content="Relatório de pagamentos, controle de saldo e gestão de empreitada.">
     <!-- Imagem Temática de Construção (Alta Qualidade) -->
-    <meta property="og:image" content="https://images.unsplash.com/photo-1543286386-2e659306cd6c?w=1200&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGdlcmVuY2lhbWVudG98ZW58MHx8MHx8fDA%3D">
+    <meta property="og:image" content="https://plus.unsplash.com/premium_vector-1682305492040-a272f5d4d3db?q=80&w=1316&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
